--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "js-cookie": "^2.2.1",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
